syntax = "proto3";

package simple.v1;

message SimpleMessage {
  string name = 1;
}
